Bug 145871 - Table row heights increased in legacy odt
Summary: Table row heights increased in legacy odt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:7.5.0 target:7.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Tables
  Show dependency treegraph
 
Reported: 2021-11-24 13:38 UTC by Gabor Kelemen (Collabora)
Modified: 2023-04-18 06:52 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Legacy odt with table (15.50 KB, application/vnd.oasis.opendocument.text)
2021-11-24 13:38 UTC, Gabor Kelemen (Collabora)
Details
The table in 6.0 and current master (341.32 KB, image/png)
2021-11-24 13:39 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2021-11-24 13:38:22 UTC
Created attachment 176468 [details]
Legacy odt with table

Attached user made document contains a table with sub-tables, some old OOo-representation of complex structure.

When opened in newer versions many cells height is significantly larger, matching the height of the tallest cell.

bibisected with linux-7.1 to:
 ec0e9f999ae673407b4e7baf9177d63b04abe6d9 is the first bad commit
commit ec0e9f999ae673407b4e7baf9177d63b04abe6d9
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Mon Oct 5 22:00:00 2020 +0200

    source 42132debf46d9ace4c4b33aead31e59b7d43d1ef
    
    source 42132debf46d9ace4c4b33aead31e59b7d43d1ef
    source 1b4b3db429555c48dd800f175f92040b73cece65
    source be44b86998b2681d0de231bd9f5364a968e7c6b8
    source 029e720dec82a68fb0135a3f2d3735e92963dc62
    source 38746ee9dfe6db8029a844576c3395b54167c3e9
    source 54759fdbba24f1a552f635fc803078b8ce83dade
    source 7f94c09b8bad0d8d31e126a95ede4fa937a8981a
    source df5c984fa2e1687603e9e1b63a69b43591f19143
    source d3792300afec9c9cb8751cae5b46e8f9198214b4
    source e366c928819c44b5c253c45dca6dae40b71c9808

:040000 040000 d9223a48d586ce1bc2828299ffe6d0ee4cdf28af 35b09a64677f4c939d4c22ff0dcc02170caa78f6 M	instdir

of which https://git.libreoffice.org/core/+/e366c928819c44b5c253c45dca6dae40b71c9808%5E%21/#F0 is most suspicious:

author	Michael Stahl <Michael.Stahl@cib.de>	Thu Oct 01 17:31:21 2020 +0200
committer	Michael Stahl <michael.stahl@cib.de>	Mon Oct 05 19:37:50 2020 +0200

sw: ODF import: convert the simplest sub-tables to rowspan tables

Adding CC to: Michael Stahl
Comment 1 Gabor Kelemen (Collabora) 2021-11-24 13:39:08 UTC
Created attachment 176469 [details]
The table in 6.0 and current master

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: 59e70256a358db136f5fd23651aea96d218b1a64
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2021-11-24 15:16:33 UTC
Reproduced in

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: becd76743fd7a3ae84404f26b1afb60b923cabb2
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Commit Notification 2022-10-07 15:45:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4757dfc2a520f63fba0b27cc161fe732231dbd0e

tdf#145871 sw: ODF import: don't convert subtables if outer row ...

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Michael Stahl 2022-10-07 15:46:38 UTC
fixed on master
Comment 5 Commit Notification 2022-10-10 12:36:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/2f52d9abd5c08e0fb31faa25db20906349c17df1

tdf#145871 sw: ODF import: don't convert subtables if outer row ...

It will be available in 7.4.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2022-10-13 12:32:09 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2b9f41880b409cafd62fb3d1cad82537f12d08b1

tdf#145871: sw_odfexport2: Add unittest

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.